# New_Improved_Trivia_App_-now_with_30-_less_carbs-

./: Cargo.toml  build.rs  data.db  diesel.toml
app/: bun.lockb  index.html  package.json  tailwind.config.js  tsconfig.node.json
app/src/: App.svelte  app.css
app/src/lib/: state.svelte.ts  types.ts
app/src/lib/game/: Host.svelte  Player.svelte  test.ts
app/src/lib/modal/: JoinGame.svelte
app/src/lib/nav/: NavBar.svelte
app/src/routes/: Game.svelte  Home.svelte  Login.svelte  Profile.svelte  WSTest.svelte
migrations/2024-12-12-050232_db_init/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  schema.rs  utils.rs
src/modules/: games.rs  mod.rs  routes.rs  users.rs  ws.rs
