[package]
name = "xmas-trivia"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.7.0"
rust-embed = "8"
mime_guess = "2.0.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
owo-colors = "3.5.0"
diesel = { version = "2.2.4", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"
xid = "1.1.1"
rand = "0.8"
actix-ws = "0.3.0"
tokio = { version = "1.0", features = ["sync"] }
parking_lot = "0.12"
